--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  #url_launcher: ^6.0.12
+  #firebase_auth: ^3.1.3
+  #cloud_firestore: ^2.5.3
+  #firebase_core: ^1.7.0
+  auto_size_text: ^3.0.0
+  sliding_up_panel: ^2.0.0+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -58,9 +63,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+  - images/cityact.png
+  - images/overview.png
+  - images/att.png
+  - images/mh.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
